cmake_minimum_required(VERSION 3.10)
project(leetcode)

set(CMAKE_CXX_STANDARD 11)

add_executable(binary_binary_search          binary/binary_search.cpp)
add_executable(my_sqrt                       binary/sqrt.cpp)
add_executable(search_in_rotate_sorted_array binary/search_in_rotate_sorted_array.cpp)
add_executable(search_in_matrix              binary/search_in_matrix.cpp)
add_executable(reverse_linked_list           List/reverse_linked_list.cpp)
add_executable(merge_two_list                List/merge_two_sorted_lists.cpp)
add_executable(swap_pairs                    List/swap_nodes_in_pairs.cpp)
add_executable(intersection_of_list          List/intersection_of_two_linked_lists.cpp)
add_executable(palindrome_list               List/palindrome_linked_list.cpp)
add_executable(cycle_list                    List/cycle_list.cpp)
add_executable(get_kth_end_list              List/get_kth_from_end_in_list.cpp)
add_executable(k_group_reserve_linked_list   List/k_group_reserve_linked_list.cpp)
add_executable(max_depth_tree                BinaryTree/max_depth_of_binary_tree.cpp)
add_executable(balanced_binary_tree          BinaryTree/balanced_binary_tree.cpp)
add_executable(diameter_binary_tree          BinaryTree/diameter_of_binary_tree.cpp)
add_executable(path_sum_iii                  BinaryTree/path_sum_iii.cpp)
add_executable(is_symmetric                  BinaryTree/symmetric_tree.cpp)
add_executable(average_level_tree            BinaryTree/average_of_levels_in_binary_tree.cpp)
add_executable(binary_tree_level_order       BinaryTree/binary_tree_level_order.cpp)
add_executable(binary_tree_in_order          BinaryTree/binary_tree_in_order.cpp)
add_executable(invert_binary_tree            BinaryTree/invert_binary_tree.cpp)
add_executable(delete_nodes_tree             BinaryTree/delete_nodes_and_return_forest.cpp)
add_executable(construct_tree_pre_in_order   BinaryTree/construct_tree_from_preorder_and_inorder.cpp)
add_executable(construct_tree_in_post_order  BinaryTree/construct_tree_from_inorder_and_postorder.cpp)
add_executable(lowest_common_ancestor        BinaryTree/lowest_common_ancestor.cpp)
add_executable(trie_tree                     BinaryTree/trie_tree.cpp)
add_executable(two_sum_1                     dual_pointer/two_sum.cpp)
add_executable(three_sum                     dual_pointer/three_sum.cpp)
add_executable(merge_two_sorted_array        dual_pointer/merge_two_sorted_array.cpp)
add_executable(save_water                    dual_pointer/save_water.cpp)
add_executable(merge_intervals               dual_pointer/merge_intervals.cpp)
add_executable(insert_intervals              dual_pointer/insert_intervals.cpp)
add_executable(queue_using_stack             data_structure/implement_queue_using_stack.cpp)
add_executable(stack_using_queue             data_structure/implement_stack_using_queue.cpp)
add_executable(min_stack                     data_structure/min_stack.cpp)
add_executable(lru                           data_structure/LRU_cache.cpp)
add_executable(simplify_path                 data_structure/simplify_path.cpp)
add_executable(hash_set                      data_structure/hashset.cpp)
add_executable(hash_map                      data_structure/hashmap.cpp)
add_executable(sort_array                    sort/sort_array.cpp)
add_executable(k_largest_element             sort/k_largest_element.cpp)
add_executable(reverse_pairs                 sort/reserve_pairs.cpp)
add_executable(sort_list                     sort/sort_list.cpp)
add_executable(coin_change                   DP/coin_change.cpp)
add_executable(edit_distance                 DP/edit_distance.cpp)
add_executable(max_subarray                  DP/max_subarray.cpp)
add_executable(longest_common_sequence       DP/longest_common_sequence.cpp)
add_executable(unique_paths                  DP/unique_paths.cpp)
add_executable(unique_paths_2                DP/unique_paths_2.cpp)
add_executable(rand10_using_rand7            IQ/rand10_using_rand7.cpp)
add_executable(atoi                          IQ/atoi.cpp)
add_executable(rotate_matrix                 IQ/rotate_matrix.cpp)
add_executable(rectangle_overlap_area        IQ/rectangle_overlap_area.cpp)
add_executable(next_permutation              IQ/next_permutation.cpp)
add_executable(spiral_order_matrix           IQ/spiral_order_matrix.cpp)
add_executable(island_num                    dfs/island_number.cpp)
add_executable(permutations                  dfs/permutations.cpp)
add_executable(longest_substring_no_repeat   String/longest_substring_no_repeat.cpp)
add_executable(longest_palindrome            String/longest_palindrome.cpp)
